--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container-fluid">
+		<div class="col-sm-2">
+				<img class="col-sm-1" src = " " alt="img">
+				<img class="col-sm-1" src = " " alt="img">
+				<img class="col-sm-1" src = " " alt="img">
+				<img class="col-sm-1" src = " " alt="img">
+				<img class="col-sm-1" src = " " alt="img">
+				<img class="col-sm-1" src = " " alt="img">
+				<img class="col-sm-1" src = " " alt="img">
+				<img class="col-sm-1" src = " " alt="img">
+				<img class="col-sm-1" src = " " alt="img">
+				<img class="col-sm-1" src = " " alt="img">
+				
+		</div>
+		<div class="col-sm-2">
+				<img class="col-sm-2" src = " " alt="img">
+				<img class="col-sm-2" src = " " alt="img">
+				<img class="col-sm-2" src = " " alt="img">
+				<img class="col-sm-2" src = " " alt="img">
+				<img class="col-sm-2" src = " " alt="img">
+				<img class="col-sm-2" src = " " alt="img">
+		</div>
+		<div class="col-sm-3">
+				<img class="col-sm-3" src = " " alt="img">
+				<img class="col-sm-3" src = " " alt="img">
+				<img class="col-sm-3" src = " " alt="img">
+		</div>
+		<div class="col-sm-4">
+				<img class="col-sm-4" src = " " alt="img">
+		</div>
+	</div>	
     <script type="text/javascript" src="./script.js">
 </script>
 
