--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container-fluid">
-		<div class="col-sm-2">
+		<div >
+				<img class="col-sm-1" src = " " alt="img">
+				<img class="col-sm-1" src = " " alt="img">
 				<img class="col-sm-1" src = " " alt="img">
 				<img class="col-sm-1" src = " " alt="img">
 				<img class="col-sm-1" src = " " alt="img">
@@ -22,7 +24,7 @@
 				<img class="col-sm-1" src = " " alt="img">
 				
 		</div>
-		<div class="col-sm-2">
+		<div>
 				<img class="col-sm-2" src = " " alt="img">
 				<img class="col-sm-2" src = " " alt="img">
 				<img class="col-sm-2" src = " " alt="img">
@@ -30,12 +32,12 @@
 				<img class="col-sm-2" src = " " alt="img">
 				<img class="col-sm-2" src = " " alt="img">
 		</div>
-		<div class="col-sm-4">
+		<div >
 				<img class="col-sm-4" src = " " alt="img">
 				<img class="col-sm-4" src = " " alt="img">
 				<img class="col-sm-4" src = " " alt="img">
 		</div>
-		<div class="col-sm-12">
+		<div >
 				<img class="col-sm-12" src = " " alt="img">
 		</div>
 	</div>	
